<resources>
    <string name="app_name">WatchesApp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title">Шпроты по матеше</string>
    <string name="properties_of_degrees">Свойста степеней</string>
    <string name="module">Модуль</string>
    <string name="progression">Проогрессии</string>
    <string name="avg_values">Свойства средних величин</string>
    <string name="formulas">Формулы сокращенного умножения</string>
    <string name="derivative">Производная</string>
    <string name="arithmetic_roots">Cвойства арифметических корней</string>
    <string name="integral">Первообразная и инграл</string>
</resources>